2008-07-06	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* configure.in:
	made 1.0.9-rc4 release

	* ica/src/demo_server.h:
	* ica/src/demo_server.cpp:
	use QTimer-objects instead of QTimer::singleShot() as Qt 4.4.0 crashes
	quite often otherwise (for whatever reason)

	* utils-win32/Makefile.am:
	* utils-win32/userinfo.cpp:
	removed obsolete files

	* build_mingw32:
	-fno-strict-aliasing is not neccessary anymore with GCC 4.3

	* ima/src/main.cpp:
	if custom ISD-port is used, apply at startup

	* ica/x11/x11vnc/inet.c:
	renamed deprecated member-variable as it's been reverted on 2008-06-24
	
2008-06-26	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/src/client.cpp:
	do not call client::update() outside of GUI-thread - fixes crashes of
	master

2008-06-24	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/src/ivs.cpp:
	* ica/x11/x11vnc/userinput.c:
	* ica/x11/x11vnc/inet.c:
	* ica/x11/x11vnc/options.h:
	* ica/x11/x11vnc/xinerama.c:
	* ica/x11/x11vnc/user.c:
	* ica/x11/x11vnc/8to24.c:
	* ica/x11/x11vnc/connections.c:
	* ica/x11/x11vnc/cursor.c:
	* ica/x11/x11vnc/x11vnc_defs.c:
	* ica/x11/x11vnc/tkx11vnc.h:
	* ica/x11/x11vnc/scan.c:
	* ica/x11/x11vnc/gui.c:
	* ica/x11/x11vnc/selection.c:
	* ica/x11/x11vnc/unixpw.c:
	* ica/x11/x11vnc/screen.c:
	* ica/x11/x11vnc/x11vnc.c:
	* ica/x11/x11vnc/ssltools.h:
	* ica/x11/x11vnc/sslhelper.c:
	* ica/x11/x11vnc/help.c:
	* ica/x11/x11vnc/options.c:
	* ica/x11/libvncserver/stats.c:
	* ica/x11/libvncserver/rfbregion.c:
	* ica/x11/libvncserver/zywrletemplate.c:
	* ica/x11/libvncserver/rfbserver.c:
	- integrated latest x11vnc-version which fixes ICA-crahes when
	  disconnecting in certain situations
	- disabled x11vnc-debug-console per default

2008-06-13	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/src/isd_server.cpp:
	* ima/src/main.cpp:
	* ima/src/main_window.cpp:
	* ima/italc.1:
	applied patch by Stephane Graber <stgraber/at/gmail/dot/com> which